# hh_service

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/: app.py  main.py  test_collector.py
app/alembic/: env.py
app/alembic/versions/: 10.05.2026.add_table_tokens.py  15.05.2026.изменил_в_модели_вакансии_work_format_.py  15.05.2026.прописал_nullable_true_к_колонке_.py  15.05.2026.удалил_колонку_schedule.py  23.05.2026.сделал_уникальным_user_id_в_usertoken.py  25.05.2026.удалил_за_ненадобностью_табличку_.py  36f3dbc413b8_add_all_tables.py  d91cabcf7d1f_create_all_tables.py  de7a8b8ef1c7_create_vacancy_skills_table.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth_and_tokens.py  token_retrieval.py  vacancies.py  views.py
app/collectors/: __init__.py  vacancy_collector.py
app/config/: app.py  configure_logging.py  db.py  settings.py
app/config/envs/: .env.template
app/exceptions/: __init__.py  token_exception.py
app/models/: __init__.py  database.py  employer.py  user_token.py  vacancy.py
app/repository/: __init__.py  token_repository.py  vacancy_repository.py
app/schemas/: __init__.py  tokens.py  vacancy.py
